--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@testing-=library/react": "*",
+    "@testing-library/dom": ">=7.21.4",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^16.8.6 || ^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
